data/derived/fa15/progs/unify/prog3077.ml.out
Characters 20-21:
  let _ = eval (VarX, 1,0);;
                      ^
Error: This expression has type int but an expression was expected of type
         float
